--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@
 # org.gradle.parallel=true
 #Fri Apr 08 18:47:31 EEST 2016
 android.useDeprecatedNdk=true
-
+org.gradle.jvmargs=-Xmx2048m
 # for enableD8=true min sdk must be > 22
 # UPDATE: temporairly commented since gradle plugin updated to 3.1.3 and claims INSTALL_FAILED_DEXOPT is fixed
 # android.enableD8=false
